Tue Oct 11 19:07:09 1994  Mark Eichin  (eichin@cygnus.com)

	* kbuild (MAKETARGETS): default to "all check" for make, but allow
	override from config fragments.

Mon Oct  3 23:36:12 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Don't build unifdef directory --- we don't need it
			anymore.

Fri Sep 30 20:22:53 1994  Mark Eichin  (eichin@cygnus.com)

	* kbuild: log arguments to THISCONF, RECONF files.

Fri Sep 30 19:28:24 1994  Mark Eichin  (eichin@cygnus.com)

	* kbuild: set SRCDIR by default from program name.

Thu Sep 29 19:54:38 1994  Mark Eichin  (eichin@cygnus.com)

	* kbuild: complete rewrite.
	* kfrags: fragments of input to kbuild.
