@@ -2,6 +2,8 @@ AC_INIT(configure.in)
 WITH_CCOPTS
 CONFIG_RULES
 AC_SET_BUILDTOP
+AC_PROG_ARCHIVE
+AC_PROG_ARCHIVE_ADD
 CONFIG_DIRS(et ss)
 MAKE_SUBDIRS("making",all)
 MAKE_SUBDIRS("cleaning",clean)
